# EDIE-vision

./: .gitmodules  README.md  model_downloads.sh
edie_detector/: CMakeLists.txt  package.xml
edie_detector/scripts/: EDIE_ID.txt  const_variable.py  edie_detector_node.py  utils.py
edie_msgs/: CMakeLists.txt  package.xml
edie_msgs/include/: edie_struct.h
edie_msgs/msg/: EdieView.msg
edie_msgs/src/: edie_struct.cpp
