<?xml version="1.0"?>
<package format="1">
  <name>edie_msgs</name>
  <version>0.0.0</version>
  <description>The edie_msgs package</description>
  <maintainer email="park@todo.todo">park</maintainer>
  <license>TODO</license>
  
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
	<build_depend>message_generation</build_depend>
	<run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
	<run_depend>message_runtime</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
